# bms-fw

./: .gitignore  .gitmodules  README.md  TMS570LS1227.ccxml  charger.c  charger.h  phantom_can.c  phantom_can.h  sys_main.h
BMS Workspace-git/bms-1227-fw/Phantom_BMS/soc/: CMakeLists.txt
BMS Workspace-git/bms-1227-fw/Phantom_drivers/: CMakeLists.txt  phantom_pl455_unittest.c
BMS Workspace-git/bms-1227-fw/Phantom_drivers/drivers/include/: Current_transducer.h  IMD.h  IMD_FreeRTOS.h  Phantom_sci.h  agentactor.h  bms_data.h  current_transducer.h  hv_driver.h  phantom_sci.h  sys_main.h  testinterface.h
BMS Workspace-git/bms-1227-fw/Phantom_drivers/drivers/soc/: soc.c  soc.h
BMS Workspace-git/bms-1227-fw/Phantom_drivers/drivers/source/: IMD.c  IMD_FreeRTOS.c  Phantom_sci.c  agentactor.c  bms_data.c  current_transducer.c  hv_driver.c  phantom_pl455.c  phantom_sci.c  pl455.c  testinterface.c
BMS Workspace-git/bms-1227-fw/Phantom_drivers/include/: append_to_vcu.h  bms_data.h  charger.h  hwConfig.h  phantom_can.h  phantom_pl455.h  soc.h  sys_main.h  thermistor.h
BMS Workspace-git/bms-1227-fw/Phantom_drivers/mock/: mock_Phantom_sci.c  mock_pl455.c
BMS Workspace-git/bms-1227-fw/Phantom_drivers/rtos/include/: queue_common.h  task_balance.h  task_bmsSlaveActor.h  task_bmsSlaveAgent.h  task_charger.h  task_command_line.h  task_imd.h  task_sensorRead.h  task_slave_pipeline.h  task_soc.h  task_stateMachine.h  task_testActor.h  (+1 more)
BMS Workspace-git/bms-1227-fw/Phantom_drivers/soc/: soc.c  soc.h  soc_unittest.c
BMS Workspace-git/bms-1227-fw/Phantom_drivers/source/: append_to_vcu.c  bms_data.c  charger.c  phantom_can.c  phantom_can_OLD.c  phantom_freertos.c  phantom_pl455.c  pl455.c  soc.c  thermistor.c
BMS Workspace-git/bms-1227-fw/Phantom_drivers/unittest/: soc_unittest.c
(+390 files in other folders)
